# Orket-Text-Games

./: .gitignore  AGENTS.md  package-lock.json  pyproject.toml
content/: crimes.yaml  guards.yaml  lie_detector.yaml  npcs.yaml  refusal_styles.yaml  scenes.yaml  secrets.yaml  voices.yaml
docs/: README.md  SRS.md
scripts/: run_live_contract_smoke.py
tests/: conftest.py  test_lie_detector.py  test_llm_render.py  test_m0_cli_smoke.py  test_m4_llm_surface_guard.py  test_m5_tts_hook.py  test_persona.py  test_prompting_m2_smoke.py  test_render_first_person_regression.py  test_render_intent_refuse_styles.py  test_runtime_disambiguation_flow.py  test_runtime_gameplay_kernel_smoke.py  test_runtime_m1_m2_smoke.py  test_runtime_nudge_no_repeat.py  test_runtime_nudge_witness_chain.py  test_runtime_playability_patch_smoke.py  test_truth_gate.py  test_truth_policy.py  test_ts_class_001_ambiguous_priority_or_unclassified.py  test_ts_class_conf_001_confidence_stability.py  test_ts_class_tie_001_deterministic_tiebreak.py  test_ts_comp_001_companion_no_hidden_state.py  test_ts_comp_nudge_001_threshold_and_nonleak.py  test_ts_content_001_schema_and_referential_integrity.py  test_ts_det_001_seed_replay_parity.py  test_ts_det_resume_001_002_resume_integrity.py  test_ts_leak_001_no_new_entities.py  test_ts_leak_surf_001_surface_probe_no_new_fact.py  test_ts_live_contract_local_smoke.py  test_ts_persist_001_run_artifacts.py  test_ts_reveal_001_reveal_completeness.py  test_ts_truth_001_decision_correctness.py  test_ts_truth_002_triangulation_requirement.py  (+3 more)
tests_integration/: README.md  (+3 more)
(+72 files in other folders)
